Fix text overflow

--- a/src/routes/App.module.scss
+++ b/src/routes/App.module.scss
@@ -122,6 +122,7 @@ $height: $width;
 
   &__body {
     padding: 1rem 1.5rem;
+    overflow-x: auto;
   }
 }
 
